--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "dotenv": "^8.1.0"
+  },
+  "devDependencies": {
+    "braces": "^3.0.2"
   }
 }
